option('jln_analyzer', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : 'Enables an static analysis. It can have false positives and false negatives. It is a bug-finding tool, rather than a tool for proving program correctness. Available only with GCC and MSVC.')
option('jln_analyzer_too_complex_warning', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : 'By default, the analysis silently stops if the code is too complicated for the analyzer to fully explore and it reaches an internal limit. This option warns if this occurs. Available only with GCC.')
option('jln_analyzer_verbosity', type : 'combo', choices : ['default', '0', '1', '2', '3'], value : 'default', description : 'Controls the complexity of the control flow paths that are emitted for analyzer diagnostics. Available only with GCC.\\n - 0: At this level, interprocedural call and return events are displayed, along with the most pertinent state-change events relating to a diagnostic. For example, for a double-free diagnostic, both calls to free will be shown.\\n - 1: As per the previous level, but also show events for the entry to each function.\\n - 2: As per the previous level, but also show events relating to control flow that are significant to triggering the issue (e.g. “true path taken” at a conditional). This level is the default.\\n - 3: As per the previous level, but show all control flow events, not just significant ones.')
option('jln_color', type : 'combo', choices : ['default', 'auto', 'never', 'always'], value : 'default', description : '')
option('jln_control_flow', type : 'combo', choices : ['default', 'off', 'on', 'branch', 'return', 'allow_bugs'], value : 'default', description : 'Insert extra runtime security checks to detect attempts to compromise your code.')
option('jln_conversion_warnings', type : 'combo', choices : ['default', 'off', 'on', 'sign', 'float', 'conversion', 'all'], value : 'on', description : 'Warn for implicit conversions that may alter a value.\\n - on: Combine conversion and sign value\\n - sign: Warn for implicit conversions that may change the sign (lke `unsigned_integer = signed_integer`) or a comparison between signed and unsigned values could produce an incorrect result when the signed value is converted to unsigned.\\n - float: Warn for implicit conversions that reduce the precision of a real value.\\n - conversion: Warn for implicit conversions that may alter a value.\\n - all: Like conversion and also warn about implicit conversions from arithmetic operations even when conversion of the operands to the same type cannot change their values.')
option('jln_coverage', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : '')
option('jln_covered_switch_default_warnings', type : 'combo', choices : ['default', 'on', 'off'], value : 'on', description : 'Warning for default label in switch which covers all enumeration values.')
option('jln_cpu', type : 'combo', choices : ['default', 'generic', 'native'], value : 'default', description : '')
option('jln_debug', type : 'combo', choices : ['default', 'off', 'on', 'gdb', 'lldb', 'vms', 'codeview', 'dbx', 'sce'], value : 'default', description : 'Produce debugging information in the operating system\'s.')
option('jln_debug_level', type : 'combo', choices : ['default', '0', '1', '2', '3', 'line_tables_only', 'line_directives_only'], value : 'default', description : 'Specify debugging level')
option('jln_diagnostics_format', type : 'combo', choices : ['default', 'fixits', 'patch', 'print_source_range_info'], value : 'default', description : 'Emit fix-it hints in a machine-parseable format.')
option('jln_diagnostics_show_template_tree', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : 'Enables printing a tree-like structure showing the common and differing parts of the types.')
option('jln_elide_type', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : 'Prints diagnostics showing common parts of template types as \"[...]\".')
option('jln_exceptions', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : 'Enable C++ exceptions.')
option('jln_fix_compiler_error', type : 'combo', choices : ['default', 'off', 'on'], value : 'on', description : 'Transforms some warnings into errors to comply with the standard.')
option('jln_float_sanitizers', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : '')
option('jln_integer_sanitizers', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : '')
option('jln_linker', type : 'combo', choices : ['default', 'bfd', 'gold', 'lld', 'mold', 'native'], value : 'default', description : 'Configure linker.')
option('jln_lto', type : 'combo', choices : ['default', 'off', 'on', 'normal', 'fat', 'thin'], value : 'default', description : 'Enable Link Time Optimization.')
option('jln_msvc_conformance', type : 'combo', choices : ['default', 'all', 'all_without_throwing_new'], value : 'all', description : 'Standard conformance options.')
option('jln_msvc_crt_secure_no_warnings', type : 'combo', choices : ['default', 'off', 'on'], value : 'on', description : 'Disable CRT warnings with MSVC.')
option('jln_msvc_diagnostics_format', type : 'combo', choices : ['default', 'classic', 'column', 'caret'], value : 'caret', description : 'Controls the display of error and warning information (https://learn.microsoft.com/en-us/cpp/build/reference/diagnostics-compiler-diagnostic-options?view=msvc-170).\\n - classic: Which reports only the line number where the issue was found.\\n - column: Includes the column where the issue was found. This can help you identify the specific language construct or character that is causing the issue.\\n - caret: Includes the column where the issue was found and places a caret (^) under the location in the line of code where the issue was detected.')
option('jln_msvc_isystem', type : 'combo', choices : ['default', 'anglebrackets', 'include_and_caexcludepath', 'assumed'], value : 'default', description : 'Warnings concerning external header (https://devblogs.microsoft.com/cppblog/broken-warnings-theory).')
option('jln_msvc_isystem_with_template_from_non_external', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : 'Warnings concerning template in an external header (requires msvc_isystem).')
option('jln_ndebug', type : 'combo', choices : ['default', 'off', 'on', 'with_optimization_1_or_above'], value : 'with_optimization_1_or_above', description : 'Enable NDEBUG macro (disable assert macro).')
option('jln_noexcept_warnings', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : 'Warn when a noexcept-expression evaluates to false because of a call to a function that does not have a non-throwing exception specification (i.e. \"throw()\" or \"noexcept\") but is known by the compiler to never throw an exception.')
option('jln_optimization', type : 'combo', choices : ['default', '0', 'g', '1', '2', '3', 'fast', 'size', 'z'], value : 'default', description : 'Optimization level.\\n - 0: Not optimize.\\n - g: Enable debugging experience.\\n - 1: Optimize.\\n - 2: Optimize even more.\\n - 3: Optimize yet more.\\n - fast: Enables all optimization=3 and disregard strict standards compliance.\\n - size: Optimize for size.\\n - z: Optimize for size aggressively (/!\\ possible slow compilation with emcc).')
option('jln_other_sanitizers', type : 'combo', choices : ['default', 'off', 'thread', 'pointer', 'memory'], value : 'default', description : 'Enable other sanitizers.')
option('jln_pedantic', type : 'combo', choices : ['default', 'off', 'on', 'as_error'], value : 'on', description : 'Issue all the warnings demanded by strict ISO C and ISO C++.')
option('jln_pie', type : 'combo', choices : ['default', 'off', 'on', 'static', 'fpic', 'fPIC', 'fpie', 'fPIE'], value : 'default', description : 'Controls position-independent code generation.')
option('jln_relro', type : 'combo', choices : ['default', 'off', 'on', 'full'], value : 'default', description : 'Specifies a memory segment that should be made read-only after relocation, if supported.')
option('jln_reproducible_build_warnings', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : 'Warn when macros \"__TIME__\", \"__DATE__\" or \"__TIMESTAMP__\" are encountered as they might prevent bit-wise-identical reproducible compilations.')
option('jln_rtti', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : 'Disable generation of information about every class with virtual functions for use by the C++ run-time type identification features (\"dynamic_cast\" and \"typeid\").')
option('jln_sanitizers', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : 'Enable sanitizers (asan, ubsan, etc).')
option('jln_shadow_warnings', type : 'combo', choices : ['default', 'off', 'on', 'local', 'compatible_local', 'all'], value : 'off', description : '')
option('jln_stack_protector', type : 'combo', choices : ['default', 'off', 'on', 'strong', 'all'], value : 'default', description : 'Emit extra code to check for buffer overflows, such as stack smashing attacks.')
option('jln_stl_fix', type : 'combo', choices : ['default', 'off', 'on'], value : 'on', description : 'Enable /DNOMINMAX with msvc.')
option('jln_stl_hardening', type : 'combo', choices : ['default', 'off', 'fast', 'extensive', 'debug', 'debug_with_broken_abi'], value : 'default', description : 'Hardening allows turning some instances of undefined behavior in the standard library into a contract violation.\\n - fast: A set of security-critical checks that can be done with relatively little overhead in constant time and are intended to be used in production. No impact on the ABI.\\n - extensive: All the checks from fast mode and some additional checks for undefined behavior that incur relatively little overhead but aren’t security-critical. No impact on the ABI.\\n - debug: Enables all the available checks, including heuristic checks that might have significant performance overhead as well as internal library assertions. No impact on the ABI.\\n - debug_with_broken_abi: Debug mode with ABI incompatibility for more check.')
option('jln_suggestions', type : 'combo', choices : ['default', 'off', 'on'], value : 'default', description : 'Warn for cases where adding an attribute may be beneficial.')
option('jln_switch_warnings', type : 'combo', choices : ['default', 'on', 'off', 'exhaustive_enum', 'mandatory_default', 'exhaustive_enum_and_mandatory_default'], value : 'on', description : 'Warnings concerning the switch keyword.')
option('jln_unsafe_buffer_usage_warnings', type : 'combo', choices : ['default', 'on', 'off'], value : 'default', description : 'Enable -Wunsafe-buffer-usage with clang (https://clang.llvm.org/docs/SafeBuffers.html).')
option('jln_var_init', type : 'combo', choices : ['default', 'uninitialized', 'pattern', 'zero'], value : 'default', description : 'Initialize all stack variables implicitly, including padding.\\n - uninitialized: Doesn\'t initialize any automatic variables (default behavior of Gcc and Clang).\\n - pattern: Initialize automatic variables with byte-repeatable pattern (0xFE for Gcc, 0xAA for Clang).\\n - zero: zero Initialize automatic variables with zeroes.')
option('jln_warnings', type : 'combo', choices : ['default', 'off', 'on', 'essential', 'extensive'], value : 'on', description : 'Warning level.\\n - on: Activates essential warnings and extras.\\n - essential: Activates essential warnings, typically -Wall -Wextra or /W4).\\n - extensive: Activates essential warnings, extras and some that may raise false positives')
option('jln_warnings_as_error', type : 'combo', choices : ['default', 'off', 'on', 'basic'], value : 'default', description : 'Make all or some warnings into errors.')
option('jln_whole_program', type : 'combo', choices : ['default', 'off', 'on', 'strip_all'], value : 'default', description : 'Assume that the current compilation unit represents the whole program being compiled. This option should not be used in combination with lto.')
option('jln_windows_abi_compatibility_warnings', type : 'combo', choices : ['default', 'off', 'on'], value : 'off', description : 'In code that is intended to be portable to Windows-based compilers the warning helps prevent unresolved references due to the difference in the mangling of symbols declared with different class-keys.')
option('jln_windows_bigobj', type : 'combo', choices : ['default', 'on'], value : 'on', description : 'Increases that addressable sections capacity.')
